@startuml UnitCurrentArchitecture
!theme toy
title Unit Component - Current Architecture

package "Unit Component (Current)" <<Rectangle>> {
  package "Layer 2 - Storage Implementation" <<Cloud>> {
    class UnitIndexStorage {
      📊 STORAGE FOUNDATION
      --
      -projectRoot: string
      -indexBaseDir: string
      --
      +init(projectRoot)
      +saveScenario(uuid, scenario, symlinks?)
      +loadScenario(uuid)
      +addSymbolicLink(uuid, path)
      +removeSymbolicLink(uuid, path)
      +getBacklinkInfo(uuid)
      +moveScenario(uuid, newLocations)
      +listScenarios()
      --
      🗂️ UUID-based 5-level storage
      🔗 Symlink management
      📋 Backlink tracking
      ⚡ Generic scenario storage
    }
    
    class UnitStorageResult {
      +success: boolean
      +message: string
      +scenarioPath?: string
      +symlinkPaths?: string[]
      +issues?: string[]
    }
    
    class UnitBacklinkInfo {
      +uuid: string
      +indexPath: string
      +symlinkPaths: string[]
      +createdAt: string
      +updatedAt: string
    }
  }
  
  package "Current Usage Pattern" <<Rectangle>> {
    note as Usage
      🔧 **Current State:**
      - UnitIndexStorage is used directly by components
      - Each component handles its own scenario logic
      - No centralized scenario management
      - Components duplicate storage patterns
      
      📊 **Clients:**
      - Web4Requirement: Direct UnitIndexStorage usage
      - Web4ChangeRequest: Direct UnitIndexStorage usage
      - DefaultUser: Uses for scenario file fixing
      
      ⚠️ **Limitations:**
      - No business logic abstraction
      - No view generation services
      - No overview/aggregation services
      - Components tightly coupled to storage
    end note
  }
}

package "External Dependencies" <<Cloud>> {
  class FileSystem {
    +readFile()
    +writeFile()
    +mkdir()
    +unlink()
  }
  
  class Path {
    +join()
    +dirname()
    +basename()
  }
}

UnitIndexStorage --> FileSystem : uses
UnitIndexStorage --> Path : uses
UnitIndexStorage --> UnitStorageResult : returns
UnitIndexStorage --> UnitBacklinkInfo : manages

package "Architecture Assessment" <<Rectangle>> {
  note as Assessment
    ✅ **Strengths:**
    - Solid UUID-based storage foundation
    - Reliable symlink management
    - Good backlink tracking
    - File system abstraction
    
    ⚠️ **Missing Capabilities:**
    - No business logic services
    - No view generation utilities
    - No overview/aggregation tools
    - No CLI service patterns
    
    🎯 **Enhancement Potential:**
    - Can be extended to provide higher-level services
    - Architecture supports service expansion
    - Storage foundation is web4-compliant
    - Ready for scenario service layer
  end note
}

@enduml
